--- a/front_server/package.json
+++ b/front_server/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^5.3.0",
     "react-json-view": "^1.21.3",
     "react-polling": "^1.0.9",
