--- a/front_server/package.json
+++ b/front_server/package.json
@@ -2,7 +2,7 @@
   "name": "front_server",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "http-proxy-middleware": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-cookie": "^7.2.0",
@@ -18,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-json-view": "^1.21.3",
     "react-polling": "^1.0.9",
+    "react-qr-barcode-scanner": "^2.0.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
